all po files updated from develop at 2019-05-25 06:59

--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-21 20:42+0200\n"
+"POT-Creation-Date: 2019-05-25 06:50+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -2483,6 +2483,10 @@ msgstr "Αναπαραγωγή DVD"
 msgid "DVD titlelist"
 msgstr "Λίστα τίτλων DVD"
 
+#, fuzzy
+msgid "DVDPlayer"
+msgstr "Αναπαραγωγή DVD"
+
 msgid "Danish"
 msgstr "Δανικά"
 
@@ -4088,6 +4092,9 @@ msgstr "Ρυθμίσεις Hotkey"
 msgid "Hotkey zap"
 msgstr "Ζάπινγκ Hotkey"
 
+msgid "Hotplug"
+msgstr ""
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Πόσα λεπτά θέλετε να προστεθούν στην εγγραφή;"
 
@@ -5243,6 +5250,10 @@ msgstr "Μη διαθέσιμα ECMPids (FTA Υπηρεσία)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Δεν βρέθηκε σκληρός δίσκος ή δεν έχει γίνει αρχικοποίηση!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Δεν υπάρχουν διαθέσιμες ενημερώσεις"
+
 msgid "No age block"
 msgstr "Χωρίς ηλικιακό μπλοκάρισμα"
 
@@ -5726,6 +5737,10 @@ msgid "Play"
 msgstr "Αναπαραγωγή"
 
 msgid "Play DVD"
+msgstr "Αναπαραγωγή DVD"
+
+#, fuzzy
+msgid "Play DVDs"
 msgstr "Αναπαραγωγή DVD"
 
 msgid "Play audio-CD..."
@@ -7911,6 +7926,9 @@ msgstr "Ομαλό"
 
 msgid "Social/Political/Economics"
 msgstr "Κοινωνία/Πολιτική/Οικονομία"
+
+msgid "SocketMMI"
+msgstr ""
 
 msgid "SoftCam / CI"
 msgstr "SoftCam / CI"
@@ -10912,6 +10930,10 @@ msgstr "προεπιλεγμένη μορφή λίστας"
 
 msgid "list style single line"
 msgstr "λίστα μονής γραμμής"
+
+#, fuzzy
+msgid "listens to hotplug events"
+msgstr "Στοίχιση προγραμμάτων"
 
 msgid "literature"
 msgstr "λογοτεχνία"
