--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-21 20:42+0200\n"
+"POT-Creation-Date: 2019-05-25 06:50+0200\n"
 "PO-Revision-Date: 2018-12-29 02:52+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: SFTEAM  angelo2807@hotmail.com\n"
@@ -2776,6 +2776,11 @@ msgid "DVD titlelist"
 msgstr "Lista de títulos de DVD"
 
 #
+#, fuzzy
+msgid "DVDPlayer"
+msgstr "Reproductor DVD"
+
+#
 msgid "Danish"
 msgstr "Danés"
 
@@ -4558,6 +4563,9 @@ msgstr "Configuración de teclas de acceso rápido"
 msgid "Hotkey zap"
 msgstr "Tecla de acceso rápido"
 
+msgid "Hotplug"
+msgstr ""
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "¿Cuántos minutos quieres agregar a la grabación?"
 
@@ -5870,6 +5878,11 @@ msgstr "No ECMPids disponible (Servicio FTA)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "¡HDD no encontrado o no inicializado!"
 
+#
+#, fuzzy
+msgid "No active subservices available."
+msgstr "No hay actualizaciones disponibles"
+
 msgid "No age block"
 msgstr "Sin bloqueo de edad"
 
@@ -6415,6 +6428,11 @@ msgstr "Reproducir"
 
 #
 msgid "Play DVD"
+msgstr "Reproducir DVD"
+
+#
+#, fuzzy
+msgid "Play DVDs"
 msgstr "Reproducir DVD"
 
 #
@@ -8893,6 +8911,9 @@ msgstr "Suave"
 
 msgid "Social/Political/Economics"
 msgstr "Social / Política / Economía"
+
+msgid "SocketMMI"
+msgstr ""
 
 msgid "SoftCam / CI"
 msgstr "SoftCam / CI"
@@ -12256,6 +12277,10 @@ msgstr "estilo de lista por defecto"
 #
 msgid "list style single line"
 msgstr "estilo de lista en una línea"
+
+#, fuzzy
+msgid "listens to hotplug events"
+msgstr "Alienacion de eventos"
 
 msgid "literature"
 msgstr "literatura"
