--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-21 20:42+0200\n"
+"POT-Creation-Date: 2019-05-25 06:50+0200\n"
 "PO-Revision-Date: 2019-05-12 07:10+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -2497,6 +2497,10 @@ msgstr "DVD player"
 msgid "DVD titlelist"
 msgstr "DVD popis naslova"
 
+#, fuzzy
+msgid "DVDPlayer"
+msgstr "DVD player"
+
 msgid "Danish"
 msgstr "Danski"
 
@@ -4105,6 +4109,9 @@ msgstr "HotKey postavke za postavljanje"
 msgid "Hotkey zap"
 msgstr "HotKey prebacivanje"
 
+msgid "Hotplug"
+msgstr ""
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Koliko minuta želite dodati snimci?"
 
@@ -5261,6 +5268,10 @@ msgstr "Nema dostupnih ECMPid (FTA usluga)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "HDD nije pronađen ili nije inicijaliziran!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Nema dostupnih ažuriranja"
+
 msgid "No age block"
 msgstr "Nema dobne granice"
 
@@ -5744,6 +5755,10 @@ msgid "Play"
 msgstr "Reproducirati"
 
 msgid "Play DVD"
+msgstr "Reprodukcija DVD-a"
+
+#, fuzzy
+msgid "Play DVDs"
 msgstr "Reprodukcija DVD-a"
 
 msgid "Play audio-CD..."
@@ -7931,6 +7946,9 @@ msgstr "Glatko"
 
 msgid "Social/Political/Economics"
 msgstr "Socijalne/političke/ekonomske"
+
+msgid "SocketMMI"
+msgstr ""
 
 msgid "SoftCam / CI"
 msgstr "SoftCam / CI"
@@ -10932,6 +10950,10 @@ msgstr "zadani popis stilova"
 
 msgid "list style single line"
 msgstr "stil liste - jedan red"
+
+#, fuzzy
+msgid "listens to hotplug events"
+msgstr "Usklađivanje događaja"
 
 msgid "literature"
 msgstr "literatura"
