--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-21 20:42+0200\n"
+"POT-Creation-Date: 2019-05-25 06:50+0200\n"
 "PO-Revision-Date: 2019-04-23 16:45+0200\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -2484,6 +2484,10 @@ msgstr "DVD lejátszó"
 msgid "DVD titlelist"
 msgstr "DVD Címlista"
 
+#, fuzzy
+msgid "DVDPlayer"
+msgstr "DVD lejátszó"
+
 msgid "Danish"
 msgstr "Dán"
 
@@ -4085,6 +4089,9 @@ msgstr "Hotkey beállítás"
 msgid "Hotkey zap"
 msgstr "Hotkey csatornaváltás"
 
+msgid "Hotplug"
+msgstr ""
+
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hány percet szeretne felvenni?"
 
@@ -5242,6 +5249,10 @@ msgstr "Nincs elérhető EMCPid (FTA csatornák)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Nem észlelhető háttértár, vagy az nem lett inicializálva!"
 
+#, fuzzy
+msgid "No active subservices available."
+msgstr "Nincs elérhető frissítés"
+
 msgid "No age block"
 msgstr "Nincs korhatár"
 
@@ -5727,6 +5738,10 @@ msgid "Play"
 msgstr "Lejátszás"
 
 msgid "Play DVD"
+msgstr "DVD lejátszás"
+
+#, fuzzy
+msgid "Play DVDs"
 msgstr "DVD lejátszás"
 
 msgid "Play audio-CD..."
@@ -7912,6 +7927,9 @@ msgstr "Lágy"
 
 msgid "Social/Political/Economics"
 msgstr "Szociális/Politika/Gazdaság"
+
+msgid "SocketMMI"
+msgstr ""
 
 msgid "SoftCam / CI"
 msgstr "SoftCam/CI"
@@ -10918,6 +10936,10 @@ msgstr "alapértelmezett lista stílus"
 
 msgid "list style single line"
 msgstr "egyvonalas lista stílus"
+
+#, fuzzy
+msgid "listens to hotplug events"
+msgstr "Események elrendezése"
 
 msgid "literature"
 msgstr "irodalom"
