el.po updated from develop at 2019-05-25
Greek translation update 25/5/2019

--- a/po/el.po
+++ b/po/el.po
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -1561,6 +1561,21 @@ msgid ""
 "Screens change with left/right buttons or use red, green, blue to toggle.\n"
 "Yellow for returning back to this intro"
 msgstr ""
+"Μπορεί να χρησιμοποιηθεί για τον έλεγχο των ελαττωματικών pixels στην οθόνη της TV.\n"
+"\n"
+"Διαθέσιμες οθόνες δοκιμής χρωμάτων:\n"
+"\n"
+"κόκκινο\n"
+"πράσινο\n"
+"μπλε\n"
+"λευκό\n"
+"μαύρο\n"
+"κυανό\n"
+"ματζέντα\n"
+"κίτρινο\n"
+"\n"
+"Οι οθόνες εναλλάσσονται με τα πλήκτρα αριστερά/δεξιά ή τη χρήση των πλήκτρων κόκκινο, πράσινο ή μπλε.\n"
+"Με το κίτρινο επιστρέφετε στην αρχική οθόνη"
 
 msgid "Can only find a network drive to store the backup this means after the flash the autorestore will not work. Alternativaly you can mount the network drive after the flash and perform a manufacurer reset to autorestore"
 msgstr "Η εφεδρεία δεν θα λειτουργήσει μετά το φλασάρισμα αν υπάρχει μόνο δίσκος δικτύου για την αποθήκευση του αντιγράφου ασφαλείας. Εναλλακτικά μπορείτε να μοντάρετε το δίσκο δικτύου μετά το φλασάρισμα και να κάνετε εργοστασιακή επαναφορά για να γίνει η αυτόματη εφεδρεία"
@@ -2483,9 +2498,8 @@ msgstr "Αναπαραγωγή DVD"
 msgid "DVD titlelist"
 msgstr "Λίστα τίτλων DVD"
 
-#, fuzzy
 msgid "DVDPlayer"
-msgstr "Αναπαραγωγή DVD"
+msgstr "Αναπαραγωγός DVD"
 
 msgid "Danish"
 msgstr "Δανικά"
@@ -3946,7 +3960,7 @@ msgid "HDMI Colordepth"
 msgstr "Βάθος χρώματος HDMI"
 
 msgid "HDMI Colorimetry"
-msgstr "HDMI Xρωματομετρία"
+msgstr "Xρωματομετρία HDMI"
 
 msgid "HDMI Colorspace"
 msgstr "Χρωματικό εύρος HDMI"
@@ -3955,10 +3969,10 @@ msgid "HDMI HDR Type"
 msgstr "Τύπος HDMI HDR"
 
 msgid "HDMI-CEC Source Active"
-msgstr "HDMI-CEC Πηγή Ενεργή"
+msgstr "HDMI-CEC Πηγή ενεργή"
 
 msgid "HDMI-CEC Source Inactive"
-msgstr "HDMI-CEC Πηγή Ανενεργή"
+msgstr "HDMI-CEC Πηγή ανενεργή"
 
 msgid "HDMI-CEC setup"
 msgstr "Ρύθμιση HDMI-CEC"
@@ -4093,7 +4107,7 @@ msgid "Hotkey zap"
 msgstr "Ζάπινγκ Hotkey"
 
 msgid "Hotplug"
-msgstr ""
+msgstr "Σύνδεση και άμεση λειτουργία"
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Πόσα λεπτά θέλετε να προστεθούν στην εγγραφή;"
@@ -5250,9 +5264,8 @@ msgstr "Μη διαθέσιμα ECMPids (FTA Υπηρεσία)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "Δεν βρέθηκε σκληρός δίσκος ή δεν έχει γίνει αρχικοποίηση!"
 
-#, fuzzy
 msgid "No active subservices available."
-msgstr "Δεν υπάρχουν διαθέσιμες ενημερώσεις"
+msgstr "Μη διαθέσιμες ενεργές υπό-υπηρεσίες."
 
 msgid "No age block"
 msgstr "Χωρίς ηλικιακό μπλοκάρισμα"
@@ -5731,7 +5744,7 @@ msgid "Pitcairn"
 msgstr "Πίτκαιρν"
 
 msgid "Pixels\n"
-msgstr ""
+msgstr "Πίξελ\n"
 
 msgid "Play"
 msgstr "Αναπαραγωγή"
@@ -5739,9 +5752,8 @@ msgstr "Αναπαραγωγή"
 msgid "Play DVD"
 msgstr "Αναπαραγωγή DVD"
 
-#, fuzzy
 msgid "Play DVDs"
-msgstr "Αναπαραγωγή DVD"
+msgstr "Αναπαραγωγή DVDs"
 
 msgid "Play audio-CD..."
 msgstr "Αναπαραγωγή CD ήχου..."
@@ -5934,9 +5946,8 @@ msgstr "Παρακαλώ ρυθμίστε το tuner Q"
 msgid "Please set up tuner R"
 msgstr "Παρακαλώ ρυθμίστε το tuner R"
 
-#, fuzzy
 msgid "Please set your time zone"
-msgstr "Παρακαλώ ρυθμίστε το tuner A"
+msgstr "Παρακαλώ ρυθμίστε τη ζώνη ώρα σας"
 
 msgid "Please setup the following basic configs!"
 msgstr "Παρακαλώ ρυθμίστε τις ακόλουθες βασικές παραμετροποιήσεις!"
@@ -7928,7 +7939,7 @@ msgid "Social/Political/Economics"
 msgstr "Κοινωνία/Πολιτική/Οικονομία"
 
 msgid "SocketMMI"
-msgstr ""
+msgstr "Θύρα ΜΜΙ"
 
 msgid "SoftCam / CI"
 msgstr "SoftCam / CI"
@@ -10931,9 +10942,8 @@ msgstr "προεπιλεγμένη μορφή λίστας"
 msgid "list style single line"
 msgstr "λίστα μονής γραμμής"
 
-#, fuzzy
 msgid "listens to hotplug events"
-msgstr "Στοίχιση προγραμμάτων"
+msgstr "ακρόαση συμβάντων σύνδεσης και άμεσης λειτουργίας"
 
 msgid "literature"
 msgstr "λογοτεχνία"
@@ -11319,13 +11329,13 @@ msgstr "μεταπήδηση πίσω"
 msgid "skip forward"
 msgstr "μεταπήδηση εμπρός"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s"
-msgstr "θέση%s - %s λειτουργία 1"
+msgstr "θέση%s - %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s (current image)"
-msgstr "θέση%s - %s λειτουργία 1 (τρέχον image)"
+msgstr "θέση%s - %s (τρέχον image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
