--- a/po/pl.po
+++ b/po/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-11 22:12+0200\n"
-"PO-Revision-Date: 2019-04-03 19:07+0200\n"
+"PO-Revision-Date: 2019-05-30 21:14+0200\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
 "Language: pl_PL\n"
@@ -990,13 +990,11 @@ msgstr "Także przy wyjściu ze standby"
 msgid "Alternative"
 msgstr "Alternatywne"
 
-#, fuzzy
 msgid "Alternative 1"
-msgstr "Alternatywne"
+msgstr "Alternatywne 1"
 
-#, fuzzy
 msgid "Alternative 2"
-msgstr "Alternatywne"
+msgstr "Alternatywne 2"
 
 msgid "Alternative URL for images listed on FlashImage"
 msgstr "Alternatywny adres URL dla obrazów wymienionych we FlashImage"
@@ -2925,7 +2923,7 @@ msgid "Don't zap and remove timer"
 msgstr "Nie przełączaj i usuń timer"
 
 msgid "Done"
-msgstr ""
+msgstr "Gotowe"
 
 #, python-format
 msgid "Done - Installed, upgraded or removed %d package (%s)"
@@ -3182,9 +3180,8 @@ msgstr "Wersja enigmy:"
 msgid "Enigma2 skin selector"
 msgstr "Wybór skina"
 
-#, fuzzy
 msgid "Enter"
-msgstr "Środek"
+msgstr ""
 
 msgid "Enter IP address"
 msgstr "Wprowadź adres IP"
@@ -5282,9 +5279,8 @@ msgstr "Brak wolnego indeksu"
 msgid "No free tuner!"
 msgstr "Brak wolnego tunera!"
 
-#, fuzzy
 msgid "No images found"
-msgstr "Nie znaleziono sieci"
+msgstr "Nie znaleziono obrazów"
 
 msgid "No network connection available."
 msgstr "Brak połączenia z siecią."
@@ -5665,7 +5661,7 @@ msgid "Parental control setup"
 msgstr "Ustawienia kontroli rodzicielskiej"
 
 msgid "Password"
-msgstr ""
+msgstr "Hasło"
 
 msgid "Pause"
 msgstr "Pauza"
@@ -5919,9 +5915,8 @@ msgstr "Skonfiguruj tuner Q"
 msgid "Please set up tuner R"
 msgstr "Skonfiguruj tuner R"
 
-#, fuzzy
 msgid "Please set your time zone"
-msgstr "Skonfiguruj tuner A"
+msgstr "Ustaw swoją strefę czasową"
 
 msgid "Please setup the following basic configs!"
 msgstr "Proszę skonfiguruj następujące podstawowe ustawienia!"
@@ -6967,9 +6962,8 @@ msgstr "Opóźnienie przewijania"
 msgid "Scroll repeats"
 msgstr "Powtórzenia przewijania"
 
-#, fuzzy
 msgid "Search"
-msgstr "Szukanie"
+msgstr "Szukaj"
 
 msgid "Search east"
 msgstr "Szukaj na wschód"
@@ -7606,7 +7600,7 @@ msgid "Show crypto icons"
 msgstr "Ikony kodowania kanału"
 
 msgid "Show crypto info in infobar"
-msgstr "System kodowania na pasku info"
+msgstr "Informacje o kodowaniu na pasku info"
 
 msgid "Show detailed event info"
 msgstr "Pokaż szczegółowy opis audycji"
@@ -8029,10 +8023,10 @@ msgid "Spanish"
 msgstr "Hiszpański"
 
 msgid "Special 1"
-msgstr "Specjalny 2"
+msgstr "Specjalne 1"
 
 msgid "Special 2"
-msgstr "Specjalny 2"
+msgstr "Specjalne 2"
 
 msgid "Specify extra timeframe to ignore inactivity sleeptimer"
 msgstr "Dodatkowy przedział czasowy ignorowania sleeptimera bezczynności"
@@ -9476,7 +9470,6 @@ msgstr "Używany typ skanowania kanałów"
 msgid "User - bouquets"
 msgstr "Bukiety"
 
-#, fuzzy
 msgid "User ID"
 msgstr "Nazwa użytkownika"
 
