--- a/po/de.po
+++ b/po/de.po
@@ -2003,16 +2003,16 @@ msgid "Configure the cursor behaviour in the channel selection list. When openin
 msgstr "Konfiguriert das Verhalten des Cursors in Kanalauswahllisten. Beim Öffnen von Kanalauswahllisten kann der Cursor auf dem aktuellen Sender bleiben oder bereits den oberen/unteren Kanal markieren (oben/unten kann dabei nach Wunsch invertiert werden)."
 
 msgid "Configure the duration in hours the receiver should go to standby when the receiver is not controlled."
-msgstr "Konfiguriere den Zeitraum in Stunden, nachdem der Receiver in den Standby wechseln soll, wenn dieser nicht mehr gesteuert wird."
+msgstr "Konfiguriere den Zeitraum in Stunden, nachdem der Receiver in den Standby-Modus wechseln soll, wenn dieser nicht mehr gesteuert wird."
 
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Konfiguriert die Dauer in Minuten bis zum Start des Bildschirmschoners."
 
 msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
-msgstr "Konfiguriere den Zeitraum in Minuten für den Ausschalt-Timer. Wähle diesen Eintrag aus und drücke OK oder die grüne Taste, um den Ausschalt-Timer zu staren/beenden."
+msgstr "Konfiguriere den Zeitraum in Minuten für den Ausschalt-Timer. Mit den\nSteuerkreuz-Tasten links / rechts wählen, und danach mit Taste OK oder grün bestätigen um den Ausschalt-Timer zu starten / stoppen."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
-msgstr "Konfiguriere die Dauer, wann der Receiver ausgeschaltet werden soll, falls er sich im Standby-Modus befindet."
+msgstr "Konfiguriere die Dauer, wann der Receiver ausgeschaltet werden soll, falls er sich im\nStandby-Modus befindet."
 
 msgid "Configure the first audio language (highest priority)."
 msgstr "Wahl der ersten Audiospur-Sprache (höchste Priorität)."
@@ -3164,7 +3164,7 @@ msgid "End time"
 msgstr "Endzeit"
 
 msgid "End time to ignore inactivity sleeptimer"
-msgstr "Endzeit zum Ignorieren des Inaktivität-Sleeptimers"
+msgstr "Endzeit zum Ignorieren des Inaktivitäts-Ausschalt-Timers"
 
 msgid "End time to ignore shutdown in standby"
 msgstr "Endzeit kein Wechsel vom Standby in Deep-Standby"
@@ -3465,7 +3465,7 @@ msgid "External subtitle switch fonts"
 msgstr "Externe Untertitel wechsel Zeichensatz"
 
 msgid "Extra end time to ignore inactivity sleeptimer"
-msgstr "Zusätzliche Endzeit, um den Inaktivitäts-Sleeptimer zu ignorieren"
+msgstr "Zusätzliche Endzeit, um den Inaktivitäts-Ausschalt-Timer zu ignorieren"
 
 msgid "Extra motor options"
 msgstr "Zusätzliche Motor-Optionen"
@@ -4240,7 +4240,7 @@ msgid "In progress"
 msgstr "In Bearbeitung"
 
 msgid "Inactivity Sleeptimer"
-msgstr "Inaktivitäts-Sleeptimer"
+msgstr "Inaktivitäts-Ausschalt-Timer"
 
 msgid "Include AIT in http streams"
 msgstr "Integriere AIT in HTTP-Streams"
@@ -8075,31 +8075,31 @@ msgid "Special 2"
 msgstr "Spezial 2"
 
 msgid "Specify extra timeframe to ignore inactivity sleeptimer"
-msgstr "Extra-Zeitbereich, in dem der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Extra-Zeitbereich in dem der Inaktivitäts-Ausschalt-Timer ignoriert wird"
 
 msgid "Specify if you want to set the blocktimes separately by weekday"
-msgstr "Blockzeiten getrennt nach Wochentag festlegen ?"
+msgstr "Blockzeiten getrennt nach Wochentag festlegen."
 
 msgid "Specify the end time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Endzeit um den Ausschalt-Timer zu ignorieren, wenn Receiver im Standby"
+msgstr "Endzeit um den Ausschalt-Timer zu ignorieren, wenn Receiver im Standby-Modus."
 
 msgid "Specify the end time until the inactivity sleeptimer should be ignored"
-msgstr "Endzeit bis wann der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Endzeit bis wann der Inaktivitäts-Ausschalt-Timer ignoriert wird."
 
 msgid "Specify the extra end time until the inactivity sleeptimer should be ignored"
-msgstr "Extra-Endzeit bis wann der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Extra-Endzeit bis wann der Inaktivitäts-Ausschalt-Timer ignoriert wird"
 
 msgid "Specify the extra start time when the inactivity sleeptimer should be ignored"
-msgstr "Extra-Startzeit ab wann der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Extra-Startzeit ab wann der Inaktivitäts-Ausschalt-Timer ignoriert wird"
 
 msgid "Specify the start time to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Startzeit um den Ausschalt-Timer zu ignorieren, wenn Receiver im Standby"
+msgstr "Startzeit um den Ausschalt-Timer zu ignorieren, wenn Receiver im Standby-Modus."
 
 msgid "Specify the start time when the inactivity sleeptimer should be ignored"
-msgstr "Startzeit ab wann der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Startzeit ab wann der Inaktivitäts-Ausschalt-Timer ignoriert wird."
 
 msgid "Specify timeframe to ignore inactivity sleeptimer"
-msgstr "Zeitbereich in dem der Inaktivitäts-Ausschalttimer ignoriert wird"
+msgstr "Zeitbereich in dem der Inaktivitäts-Ausschalt-Timer ignoriert wird"
 
 msgid "Specify timeframe to ignore the shutdown in standby"
 msgstr "Zeitbereich in dem nicht vom Standby in den Deep-Standby geschalten wird"
@@ -8167,7 +8167,7 @@ msgid "Start time"
 msgstr "Startzeit"
 
 msgid "Start time to ignore inactivity sleeptimer"
-msgstr "Startzeit zum Ignorieren des Inaktivität-Sleeptimers"
+msgstr "Startzeit zum Ignorieren des Inaktivitäts-Ausschalt-Timers"
 
 msgid "Start time to ignore shutdown in standby"
 msgstr "Startzeit kein Wechsel vom Standby in Deep-Standby"
@@ -9885,13 +9885,13 @@ msgid "When enabled you can customize the OpenWebIf settings for the fallback tu
 msgstr "Wenn aktiviert, kann der Fallback Tuner im OpenWebIf konfiguriert werden"
 
 msgid "When enabled you can specify a timeframe to ignore the shutdown timer when the receiver is in standby mode"
-msgstr "Falls aktiviert, kann ein Zeitfenster angegeben werden, indem der Ausschalt-Timer nicht beachtet wird, auch wenn sich der Receiver im Standby-Modus befindet."
+msgstr "Falls aktiviert, kann ein Zeitfenster angegeben werden, indem der Ausschalt-Timer nicht beachtet wird, auch wenn sich der Receiver im\nStandby-Modus befindet."
 
 msgid "When enabled you can specify a timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
-msgstr "Wenn diese Option aktiviert ist, können Sie einen Zeitrahmen angeben, wenn der Inaktivitäts-Sleeptimer ignoriert wird. Während dieses Zeitraums ist die Erkennung nicht deaktiviert, das Inaktivitätszeitlimit ist jedoch deaktiviert"
+msgstr "Wenn diese Option aktiviert ist, können Sie einen Zeitrahmen angeben, wann der\nInaktivitäts-Ausschalt-Timer ignoriert wird. Während dieses Zeitraums ist die Erkennung nicht deaktiviert, das Inaktivitätszeitlimit ist jedoch deaktiviert."
 
 msgid "When enabled you can specify an extra timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
-msgstr "Wenn diese Option aktiviert ist, können Sie einen zusätzlichen Zeitrahmen angeben, wenn der Inaktivitäts-Sleeptimer ignoriert wird. Während dieses Zeitraums ist die Erkennung nicht deaktiviert, das Inaktivitätszeitlimit ist jedoch deaktiviert"
+msgstr "Wenn diese Option aktiviert ist, können Sie einen zusätzlichen Zeitrahmen angeben, wann der Inaktivitäts-Ausschalt-Timer ignoriert wird. Während dieses Zeitraums ist die Erkennung nicht deaktiviert, das Inaktivitätszeitlimit ist jedoch deaktiviert."
 
 msgid "When enabled you can zap channels with the  CH+/-, B+/-, P+/- buttons instead of opening the channel selection list."
 msgstr "Falls aktiviert, kann mit den links, rechts,  CH+/-, B+/-, P+/- Tasten zwischen den Kanälen umgeschaltet werden anstelle die Kanalliste zu öffnen."
